...
                    android:layout_marginBottom="@dimen/normal_padding"
                    android:text="@string/teams"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/result_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_padding"
                    android:scrollbars="vertical" />

                <FrameLayout
...
